# Changelog
# $Id$

nn-nn-12 - Version 5.1.21
  - Fix for Bug#64205, Connected through Connector/J 5.1 to MySQL 5.5, the error message is garbled.

  - Fix for Bug#37931, Null Pointer Exception Thrown When specifying invalid character_set_results enc.

  - Fix for Bug#36662, TimeUtil.java: MEST mapping n/a.


05-02-12 - Version 5.1.20
  - Fix for Bug#64983, 5.1.19 not working with JBoss AS 4.2.3.GA.

  - Fix for Bug#13960556, java.lang.StringIndexOutOfBoundsException in com.mysql.jdbc.PreparedStatement.formatNanos(int nanos).

  - Fix for pluggable authentication tests to run on Windows.

  - Fix for Bug#13897714, NPE in testsuite.regression.StatementRegressionTest.testBug1933() with 5.6.5_m8 server.

  - Fix for Bug#55962, Savepoint identifier is occasionally considered as floating point numbers.

  - Fix for Bug#13955027, SET OPTION syntax was removed starting from 5.6.5 server version.

  - Fix for Bug#13958793, ClassCastException in ConnectionImpl.buildCollationMapping() with 4.1 server.

  - Fix for Bug#36478, Client prepared statement bugged if word 'limit' included in the query.


04-02-12 - Version 5.1.19
  - Fix for Bug#64621, setMaxRows was not correctly processed during CS PS metadata
    collection causing entire resultset to be fetched and possibly leading to OOM.

  - Fix for Bug#63456, MetaData precision is different when using UTF8 or Latin1 tables.
	The problem was in finding maxBytesPerChar through versioned mapping from Java charset to MySQL charset.
	That map returns "utf8mb4" instead "utf8" for server versions starting with 5.5.2.
	CharsetMapping, ConnectionImpl and Field have been reorganized to use static maps INDEX_TO_MYSQL_CHARSET,
	STATIC_CHARSET_TO_NUM_BYTES_MAP instead. Also dynamic maps ConnectionImpl.indexToCustomMysqlCharset
	and ConnectionImpl.mysqlCharsetToCustomMblen have been added for custom charsets.

  - Added support for pluggable authentication via the com.mysql.jdbc.AuthenticationPlugin